Test overlap issue with nav bar and top of rest of content.

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 body
 {
 	font-family: Arial,'Poppins', sans-serif;
-/*	font-family: 'Electrolize','Poppins', sans-serif;*/
 }
 
 h1
@@ -103,6 +102,11 @@ nav .navigation ul li a:hover
 /*------------- Navigation style end ------------*/
 
 
+#navbar-spacer {
+    height: 90px;  /* Match this with the navbar's height */
+}
+
+
 
 /*------------- Hero section styling start --------------*/
 #home {
@@ -110,7 +114,6 @@ nav .navigation ul li a:hover
     padding-top: 30px;
     width: 100%;
     height: 85vh;
-/*    background-size: cover;*/
     background-position: center top ;
     background-repeat: no-repeat;
     display: flex;
